# home_inventory

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  HOW_DASHBOARD_JS_WORKS.md  HOW_IT_WORKS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  README.md  deployment_summary_04252026.md  docker-compose.yml  fly.toml  how_it_works_main_rs.md  meal_generation_curls.md  pg_dump_guide.md  test_csv_example.csv
.sqlx/: query-115cc6ad115bbb40574838fea9651be099b18ef52380ae0babebdd2b820a1943.json  query-14efdf3e9d7aea377799911c6b3985e648af7f3341516d3953e9a3f2e99ece0f.json  query-196cd62785537e63fabd73110cf7226d1cdecabfda26d57de8f2b4f0280b9ffe.json  query-2ad19536c9a1b7a55af5bf016a9ec7c6fe36216db0787396aa20e831dec295bc.json  query-383dfe72c5267165c931dd083462a3adb38001125cbce46ce78d824a207c9a5f.json  query-39ec4ec0db755620682deb3f64d1b0470ebe1bbff5631036f6f22ed29521b2ea.json  query-3a838267992d9d43a50398a903fb710512b5580c76d5a1f2c0f3dca6229f636e.json  query-4925bc7d8f023f65b97bd5dbff3ebd57bd1fa354f3b925d60c78fcd3870808af.json  query-6ad25cec824c392f481447674d9f34eeec8ad6313d05fdc76fea217ed0f8bbd6.json  query-746a459c464d9373cf621982c390e425d799a5ef9e29d69823bdd8db988dcfc3.json  query-7c037248e8cfa00c6cbd85ab7e1953a0fc2f5b58f2e251850abbb47f79ff4c86.json  query-7fc0871926a752d7445f3f5adb6626d3de9247a384693f9ed57fb87b311d4580.json  query-80a0b1038a5c58dc93fea7b0ab15f5b498e613f0ce83673bb72fc9960f7f9f61.json  query-9824c06b8b83757380f317cb0e3fde69bf050f19c9332fb3143ff261bd5d5e0d.json  query-a1d3120e209bd33146236b232bdfe9c291a3c746105c2e49e2725f13672a79d4.json  (+11 more)
(+34 files in other folders)
